@@ -78,8 +78,8 @@ AC_CHECK_LIB(z, compressBound,,
 	[AC_MSG_ERROR([required library zlib missing])])
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
 #include <curl/curl.h>
-long x = CURLOPT_HTTP_CONTENT_DECODING;
-]])],, [AC_MSG_ERROR([unable to compile with curl, or curl version is < 7.16.2])])
+long x = CURLOPT_TCP_KEEPALIVE;
+]])],, [AC_MSG_ERROR([unable to compile with curl, or curl version is < 7.25.0])])
 
 # See if FUSE version is 2.9.2 or later
 AC_MSG_CHECKING([for fallocate() support in fuse])
